[package]
name = "gilgamesh"
version = "0.3.0"
edition = "2021"
description = "A small 3D rendering engine built upon WGPU with the primary goal of visualizing procedural terrains."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.13.1"
cgmath = "0.18.0"
pollster = "0.3.0"
winit = "0.26.1"
bytemuck = { version = "1.4.1", features = ["derive"] }
env_logger = "0.10.0"
hexasphere = "8.1.0"